# EFL_Border_Sample

./: EFL-Border-Sample.xml  README.md  meson.build
inc/: main.h
packaging/: EFL-Border-Sample.spec
res/: EFL-Border-Sample.edc  meson.build
src/: main.c
